--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -31,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.23",
+    "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
